--- a/src/fujin/templates/web.service
+++ b/src/fujin/templates/web.service
@@ -1,18 +1,18 @@
 # TODO: add tons of comments in this file
 [Unit]
-Description={{ app }} daemon
-Requires={{ app }}.socket
+Description={ app } daemon
+Requires={ app }.socket
 After=network.target
 
 [Service]
 Type=notify
 NotifyAccess=main
-User={{ user }}
+User={ user }
 Group=www-data
-RuntimeDirectory={{ app }}
-WorkingDirectory={{ host.project_dir }}
-ExecStart={{ host.project_dir }}/{{ command }}
-EnvironmentFile={{ host.project_dir }}/.env
+RuntimeDirectory={ app }
+WorkingDirectory={ host.project_dir }
+ExecStart={ host.project_dir }/{ command }
+EnvironmentFile={ host.project_dir }/.env
 ExecReload=/bin/kill -s HUP $MAINPID
 KillMode=mixed
 TimeoutStopSec=5
