--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ requires-python = ">=3.10"
 dependencies = [
     "cappa>=0.24.0",
     "fabric>=3.2.2",
+    "msgspec[toml]>=0.18.6",
     "rich>=13.9.2",
-    "tomlkit>=0.13.2",
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
