--- a/examples/django/bookstore/fujin.toml
+++ b/examples/django/bookstore/fujin.toml
@@ -1,4 +1,4 @@
-#app = "bookstore" infer from the pyproject.toml file
+app = "bookstore"
 #version = "0.1.0" infer from the pyproject.toml file
 requirements = "requirements.txt"
 build_command = "uv build"
