--- a/src/fujin/templates/other.service
+++ b/src/fujin/templates/other.service
@@ -5,7 +5,7 @@ Description={app} Worker
 User={user}
 Group=www-data
 WorkingDirectory={project_dir}
-ExecStart={command}
+ExecStart={project_dir}/{command}
 EnvironmentFile={project_dir}/.env
 Restart=always
 #StandardOutput=append:/var/log/your_project/qcluster.out.log
