--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,19 @@
+[build-system]
+build-backend = "hatchling.build"
+
+requires = [
+  "hatchling",
+]
+
 [project]
 name = "fujin-cli"
 version = "0.2.0"
 description = "Add your description here"
 readme = "README.md"
 authors = [
-    { name = "Tobi DEGNON", email = "tobidegnon@proton.me" } 
+  { name = "Tobi DEGNON", email = "tobidegnon@proton.me" },
 ]
 requires-python = ">=3.10"
-dependencies = [
-    "cappa>=0.24.0",
-    "fabric>=3.2.2",
-    "msgspec[toml]>=0.18.6",
-    "rich>=13.9.2",
-]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
@@ -26,33 +27,100 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 
+dependencies = [
+  "cappa>=0.24",
+  "fabric>=3.2.2",
+  "msgspec[toml]>=0.18.6",
+  "rich>=13.9.2",
+]
+
 urls.Documentation = "https://github.com/falcopackages/fujin#readme"
 urls.Issues = "https://github.com/falcopackages/fujin/issues"
 urls.Source = "https://github.com/falcopackages/fujin"
 
-[project.scripts]
-fujin = "fujin.__main__:main"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+scripts.fujin = "fujin.__main__:main"
 
 [tool.hatch.build.targets.wheel]
 packages = [
   "src/fujin",
 ]
 
-[tool.uv]
-dev-dependencies = [
-    "bump-my-version>=0.27.0",
-    "django>=5.1.2",
-    "fastapi>=0.115.3",
-    "git-cliff>=2.6.1",
-    "litestar>=2.12.1",
-]
+[tool.ruff]
+# Assume Python {{ python_version }}
+target-version = "py312"
 
-[tool.uv.workspace]
-members = ["examples/django/bookstore"]
+# Same as Black.
+line-length = 88
+indent-width = 4
+extend-include = [
+  "*.pyi?",
+]
+# Exclude a variety of commonly ignored directories.
+exclude = [
+  ".bzr",
+  ".direnv",
+  ".eggs",
+  ".git",
+  ".github",
+  ".hg",
+  ".mypy_cache",
+  ".ruff_cache",
+  ".svn",
+  ".tox",
+  ".venv",
+  "__pypackages__",
+  "_build",
+  "build",
+  "dist",
+  "migrations",
+  "node_modules",
+]
+# Like Black, indent with spaces, rather than tabs.
+format.indent-style = "space"
+# Like Black, use double quotes for strings.
+format.quote-style = "double"
+# Like Black, automatically detect the appropriate line ending.
+format.line-ending = "auto"
+lint.select = [
+  "B",  # flake8-bugbear
+  "E",  # Pycodestyle
+  "F",  # Pyflakes
+  "I",  # isort
+  "UP", # pyupgrade
+]
+lint.ignore = [
+  "E501",
+  "E741",
+] # temporary
+# Tests can use magic values, assertions, and relative imports
+lint.per-file-ignores."tests/**/*" = [
+  "PLR2004",
+  "S101",
+  "TID252",
+]
+# Allow autofix for all enabled rules (when `--fix`) is provided.
+lint.fixable = [
+  "A",
+  "B",
+  "C",
+  "D",
+  "E",
+  "F",
+  "I",
+]
+lint.unfixable = [
+]
+# Allow unused variables when underscore-prefixed.
+lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+lint.isort.force-single-line = true
+lint.isort.known-first-party = [
+  "fujin",
+]
+lint.isort.required-imports = [
+  "from __future__ import annotations",
+]
+# Preserve types, even if a file imports `from __future__ import annotations`.
+lint.pyupgrade.keep-runtime-typing = true
 
 [tool.bumpversion]
 current_version = "0.0.1"
@@ -78,6 +146,52 @@ commit_args = "--no-verify"
 filename = "pyproject.toml"
 search = 'version = "{current_version}"'
 replace = 'version = "{new_version}"'
+
+[tool.mypy]
+check_untyped_defs = true
+exclude = [
+  "docs",
+  "tests",
+  "migrations",
+  "venv",
+  ".venv",
+  "examples",
+]
+files = [
+  "fujin",
+]
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_unused_ignores = true
+
+[[tool.mypy.overrides]]
+ignore_errors = true
+module = [
+  "tests.*",
+  "docs.*",
+]
+
+[dependency-groups]
+docs = [
+  "myst-parser",
+  "shibuya",
+  "sphinx-autobuild",
+  "sphinx-copybutton",
+  "sphinx-design",
+]
+dev = [
+  "bump-my-version>=0.27.0",
+  "django>=5.1.2",
+  "fastapi>=0.115.3",
+  "git-cliff>=2.6.1",
+  "litestar>=2.12.1",
+]
+
+[tool.uv.workspace]
+members = [
+  "examples/django/bookstore",
+]
 
 [tool.git-cliff.changelog]
 header = """
