--- a/examples/django/bookstore/requirements.txt
+++ b/examples/django/bookstore/requirements.txt
@@ -4,5 +4,9 @@ asgiref==3.8.1
     # via django
 django==5.1.2
     # via bookstore (pyproject.toml)
+gunicorn==23.0.0
+    # via bookstore (pyproject.toml)
+packaging==24.1
+    # via gunicorn
 sqlparse==0.5.1
     # via django
