--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 
 dependencies = [
   "cappa>=0.24",
+  "django-tasks>=0.5",
   "fabric>=3.2.2",
   "msgspec[toml]>=0.18.6",
   "rich>=13.9.2",
@@ -177,6 +178,7 @@ docs = [
   "myst-parser",
   "shibuya",
   "sphinx-autobuild",
+  "sphinx-autodoc2>=0.5.0",
   "sphinx-copybutton",
   "sphinx-design",
 ]
