--- a/examples/django/bookstore/pyproject.toml
+++ b/examples/django/bookstore/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "django>=5.1.2",
+    "django-tasks>=0.5",
     "gunicorn>=23.0.0",
 ]
 
