basic config docs and some renaming

--- a/src/fujin/templates/web.service
+++ b/src/fujin/templates/web.service
@@ -10,9 +10,9 @@ NotifyAccess=main
 User={user}
 Group=www-data
 RuntimeDirectory={app_name}
-WorkingDirectory={project_dir}
-ExecStart={project_dir}/{command}
-EnvironmentFile={project_dir}/.env
+WorkingDirectory={app_dir}
+ExecStart={app_dir}/{command}
+EnvironmentFile={app_dir}/.env
 ExecReload=/bin/kill -s HUP $MAINPID
 KillMode=mixed
 TimeoutStopSec=5
