--- a/src/fujin/templates/other.service
+++ b/src/fujin/templates/other.service
@@ -4,9 +4,9 @@ Description={app_name} Worker
 [Service]
 User={user}
 Group=www-data
-WorkingDirectory={project_dir}
-ExecStart={project_dir}/{command}
-EnvironmentFile={project_dir}/.env
+WorkingDirectory={app_dir}
+ExecStart={app_dir}/{command}
+EnvironmentFile={app_dir}/.env
 Restart=always
 #StandardOutput=append:/var/log/your_project/qcluster.out.log
 #StandardError=append:/var/log/your_project/qcluster.err.log
