every webserver does not support the notify protocol
granian for example does not support it but gunicorn does, using this
feature with the a server that does not support it will fail deployment
with a timeout of systemd waiting for a ready signal

--- a/src/fujin/templates/web.service
+++ b/src/fujin/templates/web.service
@@ -6,8 +6,8 @@ Requires={app_name}.socket
 After=network.target
 
 [Service]
-Type=notify
-NotifyAccess=main
+#Type=notify
+#NotifyAccess=main
 User={user}
 Group={user}
 RuntimeDirectory={app_name}
