--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,9 +9,22 @@ repos:
         language: system
         files: '\.py$'
 
+  - repo: https://github.com/myint/autoflake
+    rev: v2.3.1
+    hooks:
+      - id: autoflake
+        exclude: .*/__init__.py
+        args:
+          - --in-place
+          - --remove-all-unused-imports
+          - --expand-star-imports
+          - --remove-duplicate-keys
+          - --remove-unused-variables
+
+
   - repo: https://github.com/tox-dev/pyproject-fmt
-    rev: "2.1.3"
+    rev: "v2.5.0"
     hooks:
       - id: pyproject-fmt
-        args: ["pyproject.toml"]
+        args: [ "pyproject.toml" ]
         exclude: ^(examples/)
