--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
@@ -39,6 +40,25 @@ urls.Issues = "https://github.com/falcopackages/fujin/issues"
 urls.Source = "https://github.com/falcopackages/fujin"
 
 scripts.fujin = "fujin.__main__:main"
+
+[dependency-groups]
+dev = [
+  "bump-my-version>=0.27",
+  "django>=5.1.2",
+  "fastapi>=0.115.3",
+  "git-cliff>=2.6.1",
+  "litestar>=2.12.1",
+]
+
+docs = [
+  "jupyter-sphinx>=0.5.3",
+  "myst-parser",
+  "shibuya",
+  "sphinx-autobuild",
+  "sphinx-autodoc2>=0.5",
+  "sphinx-copybutton",
+  "sphinx-design",
+]
 
 [tool.hatch.build.targets.wheel]
 packages = [
@@ -170,24 +190,6 @@ ignore_errors = true
 module = [
   "tests.*",
   "docs.*",
-]
-
-[dependency-groups]
-docs = [
-  "jupyter-sphinx>=0.5.3",
-  "myst-parser",
-  "shibuya",
-  "sphinx-autobuild",
-  "sphinx-autodoc2>=0.5.0",
-  "sphinx-copybutton",
-  "sphinx-design",
-]
-dev = [
-  "bump-my-version>=0.27.0",
-  "django>=5.1.2",
-  "fastapi>=0.115.3",
-  "git-cliff>=2.6.1",
-  "litestar>=2.12.1",
 ]
 
 [tool.uv.workspace]
