--- a/examples/django/bookstore/fujin.toml
+++ b/examples/django/bookstore/fujin.toml
@@ -3,10 +3,13 @@ requirements = "requirements.txt"
 python_version = "3.13"
 versions_to_keep = 2
 build_command = "uv build && uv pip compile pyproject.toml -o requirements.txt"
-release_command = "bookstore migrate"
+release_command = "bookstore migrate && bookstore collectstatic --no-input && sudo rsync --mkpath -a --delete staticfiles/ /var/www/bookstore/static/"
 distfile = "./../../../dist/bookstore-{version}-py3-none-any.whl"
-webserver = { upstream = "unix//run/bookstore.sock" } # or "localhost:8000"
 
+[webserver]
+upstream = "unix//run/bookstore.sock"
+type = "fujin.proxies.caddy"
+statics = { "/static/*" = "/var/www/bookstore/static/" }
 
 [aliases]
 console = "app exec -i shell"
