--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,21 @@ name = "fujin-cli"
 version = "0.2.0"
 description = "Add your description here"
 readme = "README.md"
+keywords = [
+  "caddy",
+  "deployment",
+  "django",
+  "fastapi",
+  "litestar",
+  "python",
+  "systemd",
+]
 authors = [
   { name = "Tobi DEGNON", email = "tobidegnon@proton.me" },
 ]
 requires-python = ">=3.10"
 classifiers = [
-  "Development Status :: 4 - Beta",
+  "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "Programming Language :: Python",
