--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ requires = [
 
 [project]
 name = "fujin-cli"
-version = "0.4.0"
-description = "Add your description here"
+version = "0.5.0"
+description = "Get your project up and running in a few minutes on your own vps."
 readme = "README.md"
 keywords = [
   "caddy",
@@ -58,7 +58,6 @@ dev = [
   "git-cliff>=2.6.1",
   "litestar>=2.12.1",
 ]
-
 docs = [
   "jupyter-sphinx>=0.5.3",
   "myst-parser",
@@ -67,6 +66,7 @@ docs = [
   "sphinx-autodoc2>=0.5",
   "sphinx-copybutton",
   "sphinx-design",
+  "sphinx-togglebutton>=0.3.2",
 ]
 
 [tool.hatch.build.targets.wheel]
