--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,31 +39,32 @@ jobs:
             os: ubuntu-latest
             cross: true
             release_suffix: x86_64-linux
-          # - target: x86_64-unknown-linux-musl
-          #   os: ubuntu-latest
-          #   cross: true
+          - target: x86_64-unknown-linux-musl
+            os: ubuntu-latest
+            cross: true
+            release_suffix: x86_64-linux-musl
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-latest
             cross: true
             release_suffix: aarch64-linux
           # - target: i686-unknown-linux-gnu
-          #   os: ubuntu-latest
-          #   cross: true
-          #   release_suffix: i686-linux
+          #  os: ubuntu-latest
+          #  cross: true
+          #  release_suffix: i686-linux
           # Windows
-          # - target: x86_64-pc-windows-msvc
-          #   os: windows-2022
-          #   release_suffix: x86_64-windows
-          # - target: i686-pc-windows-msvc
-          #   os: windows-2022
-          #   release_suffix: i686-windows
+          - target: x86_64-pc-windows-msvc
+            os: windows-2022
+            release_suffix: x86_64-windows
+          - target: i686-pc-windows-msvc
+            os: windows-2022
+            release_suffix: i686-windows
           # macOS
-          # - target: aarch64-apple-darwin
-          #   os: macos-12
-          #   release_suffix: aarch64-osx
-          # - target: x86_64-apple-darwin
-          #   os: macos-12
-          #   release_suffix: x86_64-osx
+          - target: aarch64-apple-darwin
+            os: macos-12
+            release_suffix: aarch64-osx
+          - target: x86_64-apple-darwin
+            os: macos-12
+            release_suffix: x86_64-osx
 
     env:
       CARGO_BUILD_TARGET: ${{ matrix.job.target }}
@@ -115,7 +116,7 @@ jobs:
       - name: Rename
         working-directory: ${{ github.workspace }}
         run: |-
-          mv dist/bin/{% endraw %}{{ cookiecutter.project_name }}{% raw %}* dist/bin/{% endraw %}{{ cookiecutter.project_name }}{% raw %}-${{ matrix.job.release_suffix }}
+          mv dist/bin/fujin_cli* dist/bin/fujin_cli-${{ matrix.job.release_suffix }}
 
       - name: Upload built binary package
         uses: actions/upload-artifact@v4
@@ -123,6 +124,23 @@ jobs:
           name: binaries-${{ matrix.job.release_suffix }}
           path: dist/bin/*
           if-no-files-found: error
+  
+  publish-to-pypi:
+    name: Publish to PyPI
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    needs: [build-python-wheel-and-sdist, build-binaries]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: wheels
+          path: dist
+
+      - uses: pypa/gh-action-pypi-publish@release/v1
 
   release:
     name: Create a GitHub release
@@ -143,9 +161,6 @@ jobs:
         run: |
           awk '/^## /{if (p) exit; p=1; next} p' ${{ github.workspace }}/CHANGELOG.md | tee ${{ github.workspace }}-CHANGELOG.txt
       
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-     
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
