--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,3 +34,10 @@ repos:
       - id: pyproject-fmt
         args: [ "pyproject.toml" ]
         exclude: ^(examples/)
+
+  # - repo: https://github.com/asottile/reorder_python_imports
+  #   rev: v3.13.0
+  #   hooks:
+  #     - id: reorder-python-imports
+  #       args:
+  #         - "--application-directories=src"
