--- a/src/fujin/templates/web.service
+++ b/src/fujin/templates/web.service
@@ -1,7 +1,7 @@
 # All options are documented here https://www.freedesktop.org/software/systemd/man/latest/systemd.exec.html
 # Inspiration was taken from here https://docs.gunicorn.org/en/stable/deploy.html#systemd
 [Unit]
-Description={app_name} daemon
+Description={app_name} {process_name}
 Requires={app_name}.socket
 After=network.target
 
