--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,12 +59,12 @@ jobs:
 #            os: windows-2022
 #            release_suffix: i686-windows
           # macOS
-          - target: aarch64-apple-darwin
-            os: macos-12
-            release_suffix: aarch64-osx
-          - target: x86_64-apple-darwin
-            os: macos-12
-            release_suffix: x86_64-osx
+          # - target: aarch64-apple-darwin
+          #   os: macos-12
+          #   release_suffix: aarch64-osx
+          # - target: x86_64-apple-darwin
+          #   os: macos-12
+          #   release_suffix: x86_64-osx
 
     env:
       CARGO_BUILD_TARGET: ${{ matrix.job.target }}
