--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 build-backend = "hatchling.build"
 
-requires = ["hatchling"]
+requires = [ "hatchling" ]
 
 [project]
 name = "fujin-cli"
@@ -17,7 +17,7 @@ keywords = [
   "python",
   "systemd",
 ]
-authors = [{ name = "Tobi DEGNON", email = "tobidegnon@proton.me" }]
+authors = [ { name = "Tobi DEGNON", email = "tobidegnon@proton.me" } ]
 requires-python = ">=3.10"
 classifiers = [
   "Development Status :: 3 - Alpha",
@@ -29,6 +29,7 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
@@ -70,7 +71,10 @@ docs = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/fujin"]
+packages = [ "src/fujin" ]
+
+[tool.uv.workspace]
+members = [ "examples/django/bookstore" ]
 
 [tool.ruff]
 # Assume Python {{ python_version }}
@@ -79,7 +83,7 @@ target-version = "py312"
 # Same as Black.
 line-length = 88
 indent-width = 4
-extend-include = ["*.pyi?"]
+extend-include = [ "*.pyi?" ]
 # Exclude a variety of commonly ignored directories.
 exclude = [
   ".bzr",
@@ -118,22 +122,22 @@ lint.ignore = [
   "I",    # isort
 ] # temporary
 # Tests can use magic values, assertions, and relative imports
-lint.per-file-ignores."tests/**/*" = ["PLR2004", "S101", "TID252"]
+lint.per-file-ignores."tests/**/*" = [ "PLR2004", "S101", "TID252" ]
 # Allow autofix for all enabled rules (when `--fix`) is provided.
-lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
-lint.unfixable = []
+lint.fixable = [ "A", "B", "C", "D", "E", "F", "I" ]
+lint.unfixable = [  ]
 # Allow unused variables when underscore-prefixed.
 lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 lint.isort.force-single-line = true
-lint.isort.known-first-party = ["fujin"]
-lint.isort.required-imports = ["from __future__ import annotations"]
+lint.isort.known-first-party = [ "fujin" ]
+lint.isort.required-imports = [ "from __future__ import annotations" ]
 # Preserve types, even if a file imports `from __future__ import annotations`.
 lint.pyupgrade.keep-runtime-typing = true
 
 [tool.bumpversion]
 current_version = "0.12.2"
 parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
-serialize = ["{major}.{minor}.{patch}"]
+serialize = [ "{major}.{minor}.{patch}" ]
 search = "{current_version}"
 replace = "{new_version}"
 regex = false
@@ -160,8 +164,8 @@ search = '__version__ = "{current_version}"'
 
 [tool.mypy]
 check_untyped_defs = true
-exclude = ["docs", "tests", "migrations", "venv", ".venv", "examples"]
-files = ["fujin"]
+exclude = [ "docs", "tests", "migrations", "venv", ".venv", "examples" ]
+files = [ "fujin" ]
 no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_configs = true
@@ -169,10 +173,7 @@ warn_unused_ignores = true
 
 [[tool.mypy.overrides]]
 ignore_errors = true
-module = ["tests.*", "docs.*"]
-
-[tool.uv.workspace]
-members = ["examples/django/bookstore"]
+module = [ "tests.*", "docs.*" ]
 
 [tool.git-cliff.changelog]
 header = """
