--- a/examples/django/bookstore/fujin.toml
+++ b/examples/django/bookstore/fujin.toml
@@ -18,18 +18,18 @@ dbconsole = "app exec -i dbshell"
 shell = "server exec --appenv -i bash"
 
 [processes]
-web = ".venv/bin/gunicorn bookstore.wsgi:application --access-logfile - --error-logfile -"
-worker = ".venv/bin/bookstore db_worker"
+web = { command = ".venv/bin/gunicorn bookstore.wsgi:application --bind unix:/run/bookstore.sock --access-logfile - --error-logfile -" }
+worker = { command = ".venv/bin/bookstore db_worker" , replicas=2}
+
+# [host]
+# domain_name = "localhost"
+# envfile = ".env.prod"
+# user = "vagrant"
+# key_filename = "../../../.vagrant/machines/default/virtualbox/private_key"
+# ssh_port = 2222
 
 [host]
-domain_name = "localhost"
+domain_name = "test.oluwatobi.dev"
 envfile = ".env.prod"
-user = "vagrant"
-key_filename = "../../../.vagrant/machines/default/virtualbox/private_key"
-ssh_port = 2222
-
-#[host]
-#domain_name = "test.oluwatobi.dev"
-#envfile = ".env.prod"
-#user = "fujin"
-
+user = "ubuntu"
+key_filename = "/var/home/tobi/bluefin.pem"
