--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
   "gevent[recommended]>=24.11.1",
   "jinja2>=3.1.3",
   "msgspec[toml]>=0.18.6",
+  "parallel-ssh>=2.16.0.post1",
   "python-dotenv>=1.0.1",
   "rich>=13.9.2",
 ]
