feat!: refactor to ejectable defaults, enhanced config, and new docs
This major refactor shifts Fujin to an "ejectable defaults" philosophy, giving users full control over their deployment templates.

Key Changes:
- **Ejectable Defaults**: `fujin init` now generates a `.fujin/` directory with editable Jinja2 templates for Systemd and Caddy.
- **Config Overhaul**: `fujin.toml` [processes] now supports a dictionary format (e.g., `{ command = "...", socket = true }`) for granular control.
- **Custom Caddy Path**: Added `webserver.config_dir` to support custom Caddy configuration paths.
- **Documentation**: Split the monolithic tutorial into dedicated "How-to" guides for Django and Binary apps.
- **Fixes**: Resolved a crash in `deploy` when pruning an empty list of releases.
- **Internal**: Migrated test suite to `inline-snapshot` and added GitHub Actions CI.

BREAKING CHANGE: The `[processes]` configuration in `fujin.toml` has been updated. While the old string format might still work in some places, the dictionary format is now the standard. Existing projects may need to run `fujin init` again to get the new `.fujin` templates.

--- a/examples/django/bookstore/fujin.toml
+++ b/examples/django/bookstore/fujin.toml
@@ -8,8 +8,7 @@ distfile = "./../../../dist/bookstore-{version}-py3-none-any.whl"
 installation_mode = "python-package"
 
 [webserver]
-upstream = "unix//run/bookstore.sock"
-type = "fujin.proxies.caddy"
+upstream = "unix//run/bookstore/bookstore.sock"
 statics = { "/static/*" = "/var/www/bookstore/static/" }
 
 [aliases]
@@ -18,18 +17,18 @@ dbconsole = "app exec -i dbshell"
 shell = "server exec --appenv -i bash"
 
 [processes]
-web = ".venv/bin/gunicorn bookstore.wsgi:application --access-logfile - --error-logfile -"
-worker = ".venv/bin/bookstore db_worker"
+web = { command = ".venv/bin/gunicorn bookstore.wsgi:application --bind unix:/run/bookstore/bookstore.sock --access-logfile - --error-logfile -" }
+worker = { command = ".venv/bin/bookstore db_worker", replicas = 2 }
+
+# [host]
+# domain_name = "localhost"
+# envfile = ".env.prod"
+# user = "vagrant"
+# key_filename = "../../../.vagrant/machines/default/virtualbox/private_key"
+# ssh_port = 2222
 
 [host]
-domain_name = "localhost"
+domain_name = "test.oluwatobi.dev"
 envfile = ".env.prod"
-user = "vagrant"
-key_filename = "../../../.vagrant/machines/default/virtualbox/private_key"
-ssh_port = 2222
-
-#[host]
-#domain_name = "test.oluwatobi.dev"
-#envfile = ".env.prod"
-#user = "fujin"
-
+user = "ubuntu"
+key_filename = "/var/home/tobi/bluefin.pem"
