--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ keywords = [
   "systemd",
 ]
 authors = [{ name = "Tobi DEGNON", email = "tobidegnon@proton.me" }]
-requires-python = ">=3.10;<3.14"
+requires-python = ">=3.10,<3.14"
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
